api my profile user, swagger docs
